--- a/sign_up.css
+++ b/sign_up.css
@@ -16,3 +16,18 @@ body{
     width: 100%;
     height: 100%;
 }
+body{
+    background-color:rgb(69, 66, 66);
+    cursor: url('tucursor.jpg'),auto;
+}
+label{
+    color:gold;
+    margin-top: 10px;
+
+}
+a {
+    color:gold;
+}
+.submit{
+    margin-top: 10px;
+}
