--- a/settings.css
+++ b/settings.css
@@ -15,7 +15,7 @@ a:hover {
     border-bottom: 2px solid black;
 }
 
-#edit_profile_link{
+.activated_link{
     border-bottom: 2px solid black;
 }
 
